--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 google-auth-oauthlib>=1.0.0
 google-auth-httplib2>=0.1.0
 google-api-python-client>=2.0.0
+google-generativeai>=0.3.0
 python-dateutil>=2.8.2
 python-dotenv>=1.0.0
 tqdm>=4.66.0
 flask>=2.0.0
 flask-wtf>=1.0.0
 gunicorn>=20.1.0
-pandas>=1.5.0 
+pandas>=1.5.0
+pytz>=2023.3 
