--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,69 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/calendar-sync', '.']
-
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/calendar-sync:$COMMIT_SHA', '.']
+  
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/calendar-sync']
-
+    args: ['push', 'gcr.io/$PROJECT_ID/calendar-sync:$COMMIT_SHA']
+  
   # Deploy container image to Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
+  - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
       - 'calendar-sync'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/calendar-sync'
+      - 'gcr.io/$PROJECT_ID/calendar-sync:$COMMIT_SHA'
       - '--region'
-      - '${_REGION}'
+      - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--memory'
+      - '1Gi'
+      - '--cpu'
+      - '1'
+      - '--timeout'
+      - '300'
+      - '--concurrency'
+      - '80'
+      - '--max-instances'
+      - '10'
+      - '--port'
+      - '5000'
       - '--set-env-vars'
-      - 'SPREADSHEET_ID=${_SPREADSHEET_ID},CALENDAR_NAME=${_CALENDAR_NAME},PROJECT_ID=${_PROJECT_ID},TIMEZONE=${_TIMEZONE}'
+      - 'FLASK_ENV=production'
 
+  # Update Cloud Scheduler job with new service URL
+  - name: 'gcr.io/cloud-builders/gcloud'
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - |
+        SERVICE_URL=$(gcloud run services describe calendar-sync --region=us-central1 --format="value(status.url)")
+        gcloud scheduler jobs update http calendar-sync-job \
+          --uri="$SERVICE_URL/trigger-sync" \
+          --location=us-central1 \
+          --quiet || \
+        gcloud scheduler jobs create http calendar-sync-job \
+          --schedule="0 * * * *" \
+          --uri="$SERVICE_URL/trigger-sync" \
+          --http-method=POST \
+          --headers="Content-Type=application/json" \
+          --location=us-central1 \
+          --description="Hourly calendar sync job" \
+          --time-zone="America/Los_Angeles" \
+          --attempt-deadline=300s
+
+# Store images in Google Container Registry
 images:
-  - 'gcr.io/$PROJECT_ID/calendar-sync' 
+  - 'gcr.io/$PROJECT_ID/calendar-sync:$COMMIT_SHA'
+
+# Build configuration
+options:
+  logging: CLOUD_LOGGING_ONLY
+  machineType: 'E2_HIGHCPU_8'
+
+# Timeout for the entire build
+timeout: '1200s' 
