docs: streamline documentation and add CI/CD setup

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -33,7 +33,7 @@ steps:
       - '--port'
       - '5000'
       - '--set-env-vars'
-      - 'FLASK_ENV=production'
+      - '^||^SEND_EMAIL=$_SEND_EMAIL,SMTP_SERVER=$_SMTP_SERVER,SMTP_PORT=$_SMTP_PORT,SMTP_USERNAME=$_SMTP_USERNAME,SMTP_PASSWORD=$_SMTP_PASSWORD,FROM_EMAIL=$_FROM_EMAIL,TO_EMAIL=$_TO_EMAIL,USE_GEMINI=$_USE_GEMINI,LOG_LEVEL=$_LOG_LEVEL,TIMEZONE=$_TIMEZONE,SPREADSHEET_ID=$_SPREADSHEET_ID,GEMINI_API_KEY=$_GEMINI_API_KEY,FLASK_SECRET_KEY=$_FLASK_SECRET_KEY,GOOGLE_CLIENT_ID=$_GOOGLE_CLIENT_ID,GOOGLE_CLIENT_SECRET=$_GOOGLE_CLIENT_SECRET'
 
   # Update Cloud Scheduler job with new service URL
   - name: 'gcr.io/cloud-builders/gcloud'
@@ -66,4 +66,23 @@ options:
   machineType: 'E2_HIGHCPU_8'
 
 # Timeout for the entire build
-timeout: '1200s' 
+timeout: '1200s'
+
+# Available substitutions
+substitutions:
+  _SPREADSHEET_ID: ''
+  _GEMINI_API_KEY: ''
+  _FLASK_SECRET_KEY: ''
+  _GOOGLE_CLIENT_ID: ''
+  _GOOGLE_CLIENT_SECRET: ''
+  _SEND_EMAIL: 'true'
+  _SMTP_SERVER: 'smtp.gmail.com'
+  _SMTP_PORT: '587'
+  _SMTP_USERNAME: ''
+  _SMTP_PASSWORD: ''
+  _FROM_EMAIL: ''
+  _TO_EMAIL: ''
+  _USE_GEMINI: 'true'
+  _LOG_LEVEL: 'INFO'
+  _TIMEZONE: 'America/Los_Angeles'
+ 
