so many improvements for winter 25.  needs more cleanup though: tests and docs.

--- a/.gitignore
+++ b/.gitignore
@@ -38,9 +38,14 @@ credentials.json
 token.pickle
 out.log
 *.log
-
-# Google Cloud
-.gcloud/
-*.key
-*.json 
+service-account-key.json
 sync_history.db
+
+# Testing
+.pytest_cache/
+
+# Debugging
+debug/
+
+# Backups
+*.bak
